--- a/index.html
+++ b/index.html
@@ -608,8 +608,8 @@
         <!-- Navigation -->
         <nav>
             <a href="#" class="logo">
-                <img src="icon.png" alt="Chapterly Logo" style="height: 32px; width: auto; margin-right: 10px;">
-                <span>Chapterly</span>
+                <img src="icon header.png" alt="Chapterly Logo" style="height: 150px; width: auto; margin-right: 10px; filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));">
+
             </a>
             <div class="nav-links">
                 <a href="#features">Features</a>
