--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         <!-- Navigation -->
         <nav>
             <a href="#" class="logo">
-                <img src="icon header.png" alt="Chapterly Logo" style="height: 150px; width: auto; margin-right: 10px; filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));">
+                <img src="icon header.png" alt="Chapterly Logo" style="height: 200px; width: auto; filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));">
 
             </a>
             <div class="nav-links">
